# libc_s7

./: BUILD.bazel  BUILD.bzl  MODULE.bazel  README.md
lib/: BUILD.bazel
lib/clibgen/: BUILD.bazel
src/: BUILD.bazel
src/clibgen/: BUILD.bazel
test/: BUILD.bazel  MODULE.bazel  libc_test.c
