package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library")
load("@libs7//plugin:MACROS.bzl", "s7_plugin", "s7_library")

################################################################
s7_plugin(
    name  = "c_s7",
    # alwayslink = True, # ensure init fn sym available for dlsym
    srcs  = ["//lib/clibgen:libc_s7.c"],
    copts = ["-Wno-unused-parameter"],
    linkopts = select({
        "@platforms//os:linux": ["-lrt"],
        "//conditions:default": []
    }),
)

# cc_shared_library(
#     name  = "c_s7_dso",  # create libc_s7.{dylib,so}
#     shared_lib_name = select({
#         "@platforms//os:macos": "libc_s7.dylib",
#         "@platforms//os:linux": "libc_s7.so",
#         # "@platforms//os:windows": "libc_s7.dll",
#         "//conditions:default": "libc_s7.so"
#     }),
#     deps = [":c_s7"]
# )
