package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl",
     "cc_library",
     # "cc_shared_library"
     )

load("@libs7//lib:BUILD.bzl", "clibgen_runner")

load("//:BUILD.bzl",
     "BASE_SRCS", "BASE_DEPS", "BASE_INCLUDE_PATHS",
     "BASE_COPTS", "BASE_DEFINES", "BASE_LINKOPTS",
     "TIMEOUT",
     "GOPT_VERSION",
     "UNITY_VERSION",
     "UTHASH_VERSION",
     "LIBC_S7_VERSION",
     "LIBS7_VERSION")

# load("//:BUILD.bzl",
#      "BASE_SRCS", "BASE_DEPS", "BASE_INCLUDE_PATHS",
#      "BASE_COPTS", "BASE_DEFINES", "BASE_LINKOPTS",
#      "LIBS7_VERSION")

SRCS          = []
DEPS          = BASE_DEPS
INCLUDE_PATHS = BASE_INCLUDE_PATHS
COPTS         = BASE_COPTS + INCLUDE_PATHS + ["-Wno-unused-parameter"]
DEFINES       = BASE_DEFINES
LINKOPTS      = BASE_LINKOPTS

################################################################
cc_library(
    name  = "c_s7",
    linkstatic = True,
    alwayslink = True, # ensure init fn sym available for dlsym
    srcs  = SRCS + [":libc_s7.c"], # "//src:s7.h"],
    # hdrs  = ["//src:s7.h", "//src:libs7.h"],
    deps  = DEPS,
    copts = COPTS,
    linkopts = LINKOPTS  + select({
        "@platforms//os:linux": ["-lrt"],
        "//conditions:default": []
    }),
    local_defines = DEFINES,
    # + select({
    #     "//config/host/build:linux?": ["_POSIX_C_SOURCE=200809",
    #                              "_DEFAULT_SOURCE" # strcasecmp in string.h
    #                              ],
    #     "//conditions:default": []
    # })
)

cc_shared_library(
    name  = "c_s7_dso",  # create libc_s7.{dylib,so}
    shared_lib_name = select({
        "@platforms//os:macos": "libc_s7.dylib",
        "@platforms//os:linux": "libc_s7.so",
        # "@platforms//os:windows": "libc_s7.dll",
        "//conditions:default": "libc_s7.so"
    }),
    deps = [":c_s7"]
    # linkshared = True,
    # srcs  = SRCS + [":libc_s7.c"], # "//src:s7.h"],
    # deps  = DEPS,
    # copts = COPTS + ["-Wno-unused-parameter"],
    # linkopts = LINKOPTS  + select({
    #     "//config/host/build:linux?": ["-lrt"],
    #     "//conditions:default": []
    # }),
    # local_defines = DEFINES  + select({
    #     "//config/host/build:linux?": ["_POSIX_C_SOURCE=200809", "_DEFAULT_SOURCE"],
    #     "//conditions:default": []
    # })
)

clibgen_runner(
    name = "libc_s7_runbin",
    args = ["--script", "$(location libc_clibgen.scm)"],
    srcs = [":libc_clibgen.scm"],
    outs = [":libc_s7.c"]
)
